<resources>
    <string name="app_name">TestMeApp</string>
    <string name="button_download">Download</string>
    <string name="button_list_tests">My tests</string>
    <string name="button_show_test">Show test</string>
    <string name="button_download_url">Download by url</string>
    <string name="button_download_qr">Download by qr</string>
    <string name="button_download_list">Download by list</string>
    <string name="button_submit">Submit</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_test_name">Test name</string>
    <string name="text_test_url">Test url</string>
    <string name="text_test_count">Test questions</string>
    <string name="text_test_duration">Test duration</string>
    <string name="text_test_min_points">Minimum points needed</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_finish">Finish</string>
    <string name="text_test_finished">Test finished</string>
    <string name="text_gathered_points">Gathered points</string>
    <string name="text_remaining">Remaining</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_run_drill">Start</string>
    <string name="text_quit_drill_title">Quit drill</string>
    <string name="text_quit_test_title">Quit test</string>
    <string name="text_quit_drill_message">Are you sure you want to quit drill?</string>
    <string name="text_quit_test_message">Are you sure you want to quit test?\nYour answers will not be saved.</string>
    <string name="answered_questions">Question: </string>
    <string name="how_many_questions">How many questions would you like to get?</string>
    <string name="are_you_sure_delete">Delete this test. Are you sure ?</string>

    <string name="button_next_question">Next Question</string>
    <string name="button_remove_test">Remove test</string>
    <string name="button_favourite_test">Favourite</string>
    <string name="button_share_qr">Share QR</string>
    <string name="button_run_drill">Run drill</string>
    <string name="button_run_test">Run test</string>
    <string name="environment">Environment</string>
    <string name="language">Language</string>
    <string name="text_tests">Tests</string>
    <string name="text_headline_download_url">Test URL address</string>
    <string name="test_downloading">Downloading ...</string>
    <string name="test_download_failed">Download failed</string>
    <string name="test_download_failed_bad_response">Download failed. \nBad address.</string>
    <string name="list_tests_failed_bad_response_title">Repository was not found.</string>
    <string name="list_tests_failed_bad_response">Please check GIT access data in settings.</string>
    <string name="test_save_successful">Saved</string>
    <string name="retry">Retry</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <!--add menu-->
    <string name="url">URL</string>
    <string name="qr_code">QR code</string>
    <string name="list">List</string>
    <!--activities headlines-->
    <string name="main_activity_head">Menu</string>
    <string name="create_qr_activity_head">Share test</string>
    <string name="list_tests_activity_head">Test list</string>
    <string name="get_test_activity_head">Download test</string>
    <string name="scan_qr_activity_head">Scan QR code</string>
    <string name="settings_activity_head">Settings</string>
    <string name="show_test_activity_head">Test</string>
    <!--permission-->
    <string name="permision_needed">Granting the permission needed</string>
    <string name="permision_camera_rationale">The app needs to access to camera to read QR code.</string>
    <!--setting-->
    <string name="pref_dark_theme">Dark theme</string>
    <string name="pref_dark_theme_summary">Dark theme settings</string>
    <string name="pref_git_category">GIT settings</string>
    <string name="pref_git_user">GIT repository owner</string>
    <string name="pref_git_repo">GIT repository</string>
    <string name="pref_git_folder">GIT repository folder</string>
    <!-- Atribut translatable="false" a nemusis to davat do prekladu. Nektere stringy se nemaji prekladat a Android s tim pocita -->
    <string name="pref_git_user_default">MichalBeran</string>
    <string name="pref_git_repo_default">PV239_project</string>
    <string name="pref_git_folder_default">Tests</string>
    <string name="button_download_test_from_list">Download test</string>
    <string name="no_tests_available">There are no tests available, because you have not downloaded any yet. You can add new by add button.</string>
    <string name="list_loading_failed">List loading failed. Please check your internet connection.</string>
</resources>
